Write next-task recipe: drop init, rework refresh mechanism
Replaces stale phase plan with a concrete implementation recipe for the
next change: removing lathe:init, switching workspace detection to .lathe/
directory presence, adding CI/lathe.skip opt-out, and replacing the
root.marker poll with per-module params-file mtime watching plus a
content-aware workspace.json watch.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>